2008-11-16  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac: Use AC_HELP_STRING.

2008-11-16  Philip Withnall  <philip@tecnocode.co.uk>

	* examples/:
	* Makefile.am: Include some example programs.

2008-11-14  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c: Don't stop parsing a comment if a comma is
	encountered.

2008-11-14  Philip Withnall  <philip@tecnocode.co.uk>

	* data/ocr-assembly.lang: Ensure the HALT instruction is highlighted.

============ Version 0.2.1

2008-11-10  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac:
	* packaging/mcus.nsi: Bump to version 0.2.1.
	* README: Update the GTK+ requirement from 2.12 to 2.14.

2008-11-10  Philip Withnall  <philip@tecnocode.co.uk>

	* packaging/README.txt:
	* packaging/windows.reg
	* packaging/windows.sh: Add a README and manual registry file for the
	zip package for Windows.
	* .bzrignore: Updated the ignore list.

============ Version 0.2.0

2008-11-10  Philip Withnall  <philip@tecnocode.co.uk>

	* NEWS:
	* configure.ac
	* packaging/mcus.nsi: Bump to version 0.2.0.
	* packaging/windows.sh: Some error reporting and general packaging
	fixes.
	* src/main-window.c: Fix a compilation warning.
	* help/Makefile.am: Makefile fixes to ensure files are deleted
	properly and at the correct times.

2008-11-10  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Updated the ignore list.

2008-11-09  Philip Withnall  <philip@tecnocode.co.uk>

	* packaging/GTK2-Runtime/gtk2-runtime/gtk2r-env.bat:
	* packaging/GTK2-Runtime/lib/libxml2.lib:
	* packaging/GTK2-Runtime/lib/libxml2_a.lib:
	* packaging/GTK2-Runtime/lib/libxml2_a_dll.lib:
	* packaging/GTK2-Runtime/lib/xmlparse.dll:
	* packaging/GTK2-Runtime/lib/xmltok.dll: Removed some unnecessary
	files from the Windows package.
	* packaging/GTK2-Runtime/share/gtksourceview-2.0/styles/tango.xml
	* packaging/GTK2-Runtime/share/gtksourceview-2.0/styles/classic.xml:
	Replaced the Tango GtkSourceView style with the Classic style, as