@@ -73,5 +73,6 @@ data/icons/16x16/Makefile
 data/icons/22x22/Makefile
 data/icons/32x32/Makefile
 data/icons/48x48/Makefile
+examples/Makefile
 help/Makefile
 ])
